Modify Cart and fix Navbar overlapping

--- a/src/components/AboutUs/index.css
+++ b/src/components/AboutUs/index.css
@@ -45,7 +45,7 @@
 
 .about-section-description {
   font-family: Roboto Mono;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 500;
   line-height: 21px;
 }
