--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -1,10 +1,18 @@
-.cart-container {
-  padding: 0px 4%;
+.cart {
+  padding: 4%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cart-width-container {
+  width: 100%;
+  border: 2px solid #cecece;
 }
 
 @media screen and (min-width: 768px) {
-  .cart-container {
-    padding: 0px 8%;
+  .cart-width-container {
+    width: 76%;
   }
 }
 
@@ -12,27 +20,31 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 24px;
 }
 
-.total-title {
+.total-amount {
   color: #000;
   font-family: Roboto Mono;
-  font-size: 24px;
+  font-size: 16px;
   font-weight: 700;
+  margin: 0px;
 }
 
 .checkout-button {
   background-color: #000000;
   font-family: Roboto Mono;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   color: #fff;
-  padding: 12px 16px;
-  border-radius: 8px;
+  height: 36px;
+  width: 100px;
+  border-radius: 4px;
 }
 
 .checkout-popup {
   background-color: #00000060;
+  backdrop-filter: blur(10px);
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -45,6 +57,7 @@
   padding: 24px;
   width: 100%;
   max-width: 390px;
+  border-radius: 12px;
 }
 
 .checkout-msg {
@@ -76,8 +89,15 @@
   font-size: 16px;
   font-weight: 400;
   color: #fff;
-  padding: 8px 36px;
-  border-radius: 8px;
+  height: 36px;
+  width: 100px;
+  border-radius: 4px;
   align-self: flex-end;
   margin: 6px;
+}
+
+.cart-items {
+  padding: 24px;
+  padding-bottom: 0px;
+  border-top: 2px solid #cecece;
 }
