--- a/src/components/Navbar/NavbarCommonRoutes/index.css
+++ b/src/components/Navbar/NavbarCommonRoutes/index.css
@@ -5,12 +5,13 @@
 @media screen and (min-width: 828px) {
   .route {
     margin-left: 12px;
+    padding: 0px 16px;
   }
 }
 
 .route-name {
   font-family: Roboto Mono;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 400;
   color: #000000;
 }
@@ -23,7 +24,7 @@
 
 .active-route-name {
   font-family: Roboto Mono;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 600;
   color: #000000;
 }
@@ -41,16 +42,8 @@
   font-weight: 400;
   color: #fff;
   border-radius: 6px;
-  padding: 12px 16px 16px 16px;
-  height: 48px;
+  height: 36px;
   width: 100px;
-}
-
-@media screen and (min-width: 828px) {
-  .nav-sign-up {
-    font-size: 16px;
-    padding: 8px 20px 10px 20px;
-  }
 }
 
 @media screen and (min-width: 828px) {
