--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -8,7 +8,7 @@
   left: 0;
   width: 100%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
+  z-index: 100;
   background-color: rgb(232, 226, 218);
 }
 
@@ -51,8 +51,7 @@
   height: 100vh;
   width: 100vw;
   background-color: rgb(232, 226, 218);
-  list-style-type: none;
-  padding: 36px;
+  padding: 24px;
 }
 
 .close-menu-container {
@@ -67,5 +66,6 @@
 @media screen and (min-width: 828px) {
   .navbar-desktop-routes {
     display: flex;
+    align-items: center;
   }
 }
